223-fix-user-fed-card-wrapping (#226)

--- a/src/components/keycloak-card/keycloak-card.css
+++ b/src/components/keycloak-card/keycloak-card.css
@@ -1,3 +1,3 @@
-  .keycloak__keycloak-card__footer-label {
-    margin-left: var(--pf-global--spacer--lg);
-  }
+.keycloak-admin--keycloak-card__footer-text {
+  --pf-l-flex--spacer: var(--pf-l-flex--spacer--lg);
+}
