--- a/src/user-federation/user-federation.css
+++ b/src/user-federation/user-federation.css
@@ -1,3 +1,7 @@
 .keycloak__user-federation__dropdown {
-    margin-top: var(--pf-global--spacer--lg);
-  }
+  margin-top: var(--pf-global--spacer--lg);
+}
+
+.keycloak-admin--user-federation__gallery-item {
+  display: contents;
+}
